tests/ui/consts/const_in_pattern/reject_non_partial_eq.stderr
error: to use a constant of type `Option<NoPartialEq>` in a pattern, the type must implement `PartialEq`
  --> $DIR/reject_non_partial_eq.rs:28:9
   |
LL |         NO_PARTIAL_EQ_NONE => println!("NO_PARTIAL_EQ_NONE"),
   |         ^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

